<resources>
    <string name="app_name">prices</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松開可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加載全部</string>
    <string name="no_data">暫無數據</string>
    <string name="no_data_type">沒有可以篩選的屬性</string>
    <string name="more">加載中</string>
    <string-array name="main_menu_arry">
        <item>Facebook分享</item>
        <item>Wechat分享</item>
        <item>常見問題</item>
        <item>二手買賣區守則</item>
        <item>交易安全貼士</item>
    </string-array>
    <string name="album_all">All Photos</string>
    <string name="check_is_picture">請先選擇要發布的圖片</string>
    <string name="jiage">價格</string>
    <string name="yongjiayijian">用家意見</string>
    <string name="tijiao">提交</string>
    <string name="dianhua">電話</string>
    <string name="address">地址</string>
    <string name="jianjie">簡介</string>
    <string name="fenlei">分類</string>
    <string name="qingbao">情報</string>
    <string name="fujin">附近</string>
    <string name="ershou">二手</string>
    <string name="liaotianhaoyou">聊天/好友</string>
    <string name="zuijinliulan">最近瀏覽</string>
    <string name="shezhi">設置</string>
    <string name="saoyisao">掃壹掃</string>
    <string name="anxindinggouyuyuefuwu">安心訂購/預約服務</string>
    <string name="denglu">登錄</string>
    <string name="zhuce">註冊</string>
    <string name="xiangce">相冊</string>
    <string name="quxiao">取消</string>
    <string name="zuijinzhaopian">最近照片</string>
    <string name="xuanzexiangce">選擇相冊</string>
    <string name="shoucangxiangmu">收藏項目</string>
    <string name="shoucangshanghu">收藏商戶</string>
    <string name="bianjizhanghu">編輯賬戶</string>
    <string name="shenqingkaidian">商家申請開店</string>
    <string name="guolvqi">過濾器</string>
    <string name="shoucang">收藏</string>
    <string name="select_type">選擇商店類型</string>
    <string name="shangpinxiangqing">商品詳情</string>
    <string name="xiaoxi">消息</string>
    <string name="lianxiren">聯系人</string>
    <string name="fatie">發帖</string>
    <string name="dakaixiangji">打開相機</string>
    <string name="shanghufanwei">商戶範圍</string>
    <string name="renzhengyonghu">認證商戶</string>
    <string name="suoyouyonghu">所有商戶</string>
    <string name="txt001">Belkin智能電子控制子控制節能燈</string>
    <string name="txt002">重慶市渝北區金融路19號新科國際廣場1樓1-01</string>
    <string name="txt003">意大利歡樂遊</string>
    <string name="txt005">電燈類/節能燈</string>
    <string name="txt004">點\n擊\n了\n解\n活\n動\n詳\n情</string>
    <string name="fanhui">返 回</string>
    <string name="shanchu">刪  除</string>
    <string name="taolun">討論</string>
    <string name="ershoujia">二手價</string>
    <string name="youxiangshoujihaonicheng">郵箱手機號昵稱</string>
    <string name="wanjimima">忘記密碼</string>
    <string name="disanfang">使用第三方賬號登錄</string>
    <string name="disanfang001">使用第三方賬號壹鍵登錄，方便快捷</string>
    <string name="facebook">以facebook賬戶登錄</string>
    <string name="gengduo">更多</string>
    <string name="souhaoyou">搜索好友/商家</string>
    <string name="fujin3">附近%1$s千米</string>
    <string name="txt006">共有%1$s個地標</string>
    <string name="zuixinqingbao">最新情報</string>
    <string name="zhuantibaodao">專題報道</string>
    <string name="shumakeji">數碼科技</string>
    <string name="pinweishenghuo">品味生活</string>
    <string name="meishiguangchang">美食廣場</string>
    <string name="xiuxianyule">休閑娛樂</string>
    <string name="dianziyouxiang">電子郵箱</string>
    <string name="shangdianleixing">點此選擇商店類型</string>
    <string name="dianname">店名</string>
    <string name="shouji">手機</string>
    <string name="xingming">姓名</string>
    <string name="weisheding">未設定</string>
    <string name="qingshurushoujihao">請輸入手機號碼</string>
    <string name="xingbie">性別</string>
    <string name="addressbiaoji">當前位置默認是您的商鋪位置</string>
    <string name="qingshangchuanzj">請上傳證件高清照</string>
    <string name="zhengjianyq">證件要求：證件清晰，信息明確</string>
    <string name="jieshoudianzi">接收電子會員通訊</string>
    <string name="genggaimima">更改密碼</string>
    <string name="tuichu">退出</string>
    <string name="shuodianer">說點兒什麽吧......</string>
    <string name="fabu">發布</string>
    <string name="shoujizhuce">手機註冊</string>
    <string name="youxiangzhuce">郵箱註冊</string>
    <string name="weishoujihaoma">11位手機號碼</string>
    <string name="shoujiyanzhengma">手機驗證碼</string>
    <string name="weimima">6-32位密碼</string>
    <string name="yanzhengma">驗證碼</string>
    <string name="ershoumaimai">二手買賣</string>
    <string name="shangjiaxiangqing">賣家詳情</string>
    <string name="lianximaijia">聯系賣家</string>
    <string name="yishoucankaojia">壹手參考價</string>
    <string name="ershoushichang">二手市場</string>
    <string name="shumachanpin">數碼產品</string>
    <string name="chongqingshi">重慶市</string>
    <string name="yubeiqu">渝北區</string>
    <string name="jieshoutuisong">接收推送消息</string>
    <string name="shiyongbaidu">使用百度定位</string>
    <string name="cunchuni">存儲妳訂購/預約的身份</string>
    <string name="yuyan">語言</string>
    <string name="jiantizhongwen">簡體中文</string>
    <string name="qingchu">清除臨時文件</string>
    <string name="fuwutiaokuan">服務條款</string>
    <string name="yinsizhengce">隱私政策</string>
    <string name="jianchabanben">檢查版本</string>
    <string name="saoasao">掃壹掃</string>
    <string name="ershougoumaishouze">二手購買守則</string>
    <string name="tongxun">通訊</string>
    <string name="sheying">攝影</string>
    <string name="yingyin">影音</string>
    <string name="diannao">電腦</string>
    <string name="youxi">遊戲</string>
    <string name="jiaju">家居</string>
    <string name="shenghuo">生活</string>
    <string name="yinge">嬰兒</string>
    <string name="yinshi">飲食</string>
    <string name="lvyou">旅遊</string>
    <string name="meirong">美容</string>
    <string name="network_error">"當前網絡連接不可用"</string>
    <string name="reg_error_one">"請輸入手機號"</string>
    <string name="reg_error_one_one">"請輸入真實的郵箱"</string>
    <string name="reg_error_three">"請輸入密碼"</string>
    <string name="reg_error_five">"請輸入驗證碼"</string>
    <string name="daojishi_one">"倒計時"</string>
    <string name="daojishi_two">"秒"</string>
    <string name="daojishi_three">"重新獲取"</string>
    <string name="get_card_error">"驗證碼獲得失敗"</string>
    <string name="reg_error_four">"註冊失敗"</string>
    <string name="reg_error_six">"該電話號碼已註冊"</string>
    <string name="reg_error_seven">"該郵箱已註冊"</string>
    <string name="reg_error_two">"獲得驗證碼失敗"</string>
    <string name="check_new_version">檢查中...</string>
    <string name="login_error">登陸失敗</string>
    <string name="login_error_one">請輸入用戶名</string>
    <string name="login_error_two">請輸入密碼</string>
    <string name="get_no_data">獲得數據失敗</string>
    <string name="no_pingjia">沒有評價</string>
    <string name="shangpinliebiao">商品列表</string>
    <string name="rmb">RMB：</string>
    <string name="state">刊登狀態:</string>
    <string name="state_one">刊登中</string>
    <string name="state_two">下架</string>
    <string name="status">狀況:</string>
    <string name="reg_time">刊登日期:</string>
    <string name="last_time">最後更新:</string>
    <string name="baojia">報價</string>
    <string name="pinglun">評論</string>
    <string name="qingshurrubaojiaxinxi">請輸入完整報價信息</string>
    <string name="xinwendetail">新聞詳情</string>
    <string name="xinwengaoriqi">新聞稿日期:</string>
    <string name="resetpwr">更改密碼</string>
    <string name="suresub">確定</string>
    <string name="please_pwr_error_one">請輸入密碼</string>
    <string name="please_pwr_error_two">修改密碼失敗</string>
    <string name="Are_logged_out">退出</string>
    <string name="set_error_one">設置失敗</string>
    <string name="email_error_one">郵箱格式不正確</string>
    <string name="mobile_error_one">手機格式不正確</string>
    <string name="edit_user_name">更改會員用戶名</string>
    <string name="msg_pwr">*只能修改壹次</string>
    <string name="msg_pwr_error_one">密碼輸入錯誤</string>
    <string name="update_pwr_success">修改密碼成功</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="is_quite">確定退出？</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>
    <string name="user_error_one">請輸入用戶名</string>
    <string name="set_user_success">修改用戶名成功</string>
    <string name="set_user_error_one">此賬號已修改過，不能再修改</string>
    <string name="yonghuzhongxin">用戶中心</string>
    <string name="tuijianchegndu">推薦程度:</string>
    <string name="shuxichegndu">熟悉程度:</string>
    <string name="pinglunshijian">評論時間:</string>
    <string name="item_idea">意見:</string>
    <string name="item_merit">優點:</string>
    <string name="item_defect">缺點:</string>
    <string name="zhichi">支持%1$s</string>
    <string name="fandui">反對%1$s</string>
    <string name="pingfen">評分:%1$s</string>
    <string name="shiyongshijian">使用時間:</string>
    <string name="comment_error">評論失敗</string>
    <string name="has_no_data">暫無數據</string>
    <string name="shangpinmingcheng">商品名稱</string>
    <string name="jiantizhongwn">簡體中文</string>
    <string name="fantizhoagnwen">繁體中文</string>
    <string name="sales_error_one">請輸入完整信息</string>
    <string name="shiyongshjian">使用時間</string>
    <string name="shuxichengdu">熟悉程度</string>
    <string name="tuijianchengdu">推薦程度</string>
    <string name="yijian">意見</string>
    <string name="youdian">優點</string>
    <string name="quedian">缺點</string>
    <string name="please_wait">請等待</string>
    <string name="shenqing_success">申請開店成功</string>
    <string name="shenqing_fail_five">申請開店失敗,手機號碼重復</string>
    <string name="shenqing_fail">申請開店失敗</string>
    <string name="prices_type">￥</string>
    <string name="guolv">篩選</string>
    <string name="fuwuzhengce">服務政策</string>
    <string name="year">年</string>
    <string name="geyue">個月</string>
    <string name="day">日</string>
    <string name="zhuanye">專業</string>
    <string name="jinjie">進階</string>
    <string name="yiban">壹般</string>
    <string name="xinshou">新手</string>
    <string name="jilituijian">極力推薦</string>
    <string name="tuijian">推薦</string>
    <string name="butuijian">不推薦</string>
    <string name="meiyouyijian">沒有意見</string>
    <string name="qingxuanzeshiyongshijian">請選擇使用時間</string>
    <string name="qingxuanzeshiyongchengtdu">請選擇熟練程度</string>
    <string name="qingxuanzetuijianchengtdu">請選擇推薦程度</string>
    <string name="qingshurushiyongyijian">請輸入使用意見</string>
    <string name="qingshurushiyongyijianyoudian">請輸入優點，沒有請填寫無</string>
    <string name="qingshurushiyongyijianquedian">請輸入缺點，沒有請填寫無</string>
    <string name="pinglunchenggong">評論成功</string>
    <string name="pinglunshibai">評論失敗</string>
    <string name="fujinshagnhu">附近商戶</string>
    <string name="qingshurujiage">請輸入價格</string>
    <string name="shagnhu">商戶</string>
    <string name="shangdianmingcheng">商店名稱</string>
    <string name="baojia_fail">報價失敗</string>
    <string name="baojia_success">報價成功</string>
    <string name="changjianwenti">常見問題</string>
    <string name="anquantieshi">交易安全貼士</string>
    <string name="text_ack_msg">已讀</string>
    <string name="text_delivered_msg">送達</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住說話</string>
    <string name="button_send">發送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">圖片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">視頻</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">語音電話</string>
    <string name="attach_video_call">視頻通話</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消發送</string>
    <string name="release_to_cancel">松開手指，取消發送</string>
    <string name="send_fail">發送消息失敗,</string>
    <string name="delete_message">刪除消息</string>
    <string name="delete_conversation_messages">刪除會話和消息</string>
    <string name="delete_conversation">刪除會話</string>
    <string name="copy_message">復制消息</string>
    <string name="hanghuojiage">行貨價格</string>
    <string name="shuihuojiage">水貨價格</string>
</resources>