<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- head开始 -->
    <RelativeLayout
            android:id="@+id/lp_01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            >
        <ImageView
                android:id="@+id/leftbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_centerVertical="true"
                  android:text="@string/baojia"
                  android:layout_toRightOf="@+id/leftbutton"
                  android:textColor="@color/white"
                  android:textSize="22sp"
                  android:layout_height="wrap_content"/>
        <ImageView android:layout_width="wrap_content"
                   android:src="@drawable/find"
                   android:layout_marginRight="10dp"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:visibility="gone"
                   android:layout_height="wrap_content"/>
    </RelativeLayout>
    <!-- head结束 -->
    <TextView android:layout_width="match_parent"
              android:text="safadsff"
              android:id="@+id/title"
              android:textColor="@color/black"
              android:background="@color/gray_two"
              android:padding="15dp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:text="@string/hanghuojiage"
              android:textColor="@color/black"
              android:padding="8dp"
              android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/qingshurujiage"
            android:id="@+id/prices"/>
    <TextView android:layout_width="wrap_content"
              android:text="@string/shuihuojiage"
              android:textColor="@color/black"
              android:padding="8dp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="点此选择商店类型"
              android:textColor="@color/blue_qian"
              android:padding="12sp"
              android:visibility="gone"
              android:id="@+id/goods_type"
              android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:visibility="gone"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/shangdianmingcheng"
            android:id="@+id/goods_name"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/dianhua"
            android:id="@+id/tel"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:visibility="gone"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/address"
            android:id="@+id/address"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:visibility="gone"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/jianjie"
            android:id="@+id/info"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:visibility="gone"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/shuihuojiage"
            android:id="@+id/qingshurujiage"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/et_bule_bg"
            android:paddingLeft="10dip"
            android:drawablePadding="10dip"
            android:hint="@string/shuihuojiage"
            android:id="@+id/shuihuojiage"/>


    <Button android:layout_width="match_parent"
            android:text="@string/tijiao"
            android:id="@+id/sure"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue_qian"
            android:layout_height="wrap_content"/>

</LinearLayout>