<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- head开始 -->
    <RelativeLayout
            android:id="@+id/lp_01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            >
        <ImageView
                android:id="@+id/leftbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/denglu"
                  android:textColor="@color/white"
                  android:textSize="22sp"
                  android:layout_height="wrap_content"/>
        <Button android:layout_width="60dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:text="@string/zhuce"
                android:id="@+id/reg_button"
                android:textColor="@color/white"
                android:background="@drawable/button_selector_gray"
                android:layout_height="35dp"/>
    </RelativeLayout>
    <!-- head结束 -->
    <RelativeLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                  android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"
                      android:clickable="false"
                      android:layout_marginTop="20dp"
                      android:id="@+id/name_editext"
                      android:layout_width="match_parent"
                      android:layout_height="60dp"
                      android:gravity="center"
                      style="@style/list_item_middle">
            <TextView android:layout_width="wrap_content"
                       android:layout_marginTop="5dp"
                      android:text="账号  | "
                      android:textColor="@color/yellow"
                       android:layout_marginLeft="10dp"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="wrap_content"
                      android:layout_weight="1"
                      android:textSize="16dp"
                      android:layout_marginTop="5dp"
                      android:background="@null"
                      android:layout_gravity="center_vertical"
                      android:gravity="center_vertical"
                      android:layout_marginLeft="15dp"
                      android:id="@+id/mobile"
                      android:textColor="@color/text_color_heise_504f4f"
                      android:hint="@string/youxiangshoujihaonicheng"
                      android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:clickable="false"
                      android:layout_below="@+id/name_editext"
                      android:id="@+id/pass_editext"
                      android:layout_width="match_parent"
                      android:layout_height="60dp"
                      style="@style/list_item_single">
            <TextView android:layout_width="wrap_content"
                       android:layout_marginLeft="10dp"
                       android:textColor="@color/yellow"
                       android:text="密码  |"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="wrap_content"
                      android:layout_weight="1"
                      android:textSize="16dp"
                      android:layout_marginTop="2dp"
                      android:layout_marginLeft="15dp"
                      android:id="@+id/password"
                      android:layout_gravity="center_vertical"
                      android:gravity="center_vertical"
                      android:background="@null"
                      android:hint="@string/weimima"
                      android:password="true"
                      android:textColor="@color/text_color_heise_504f4f"
                      android:layout_height="match_parent"/>
        </LinearLayout>
        <Button android:layout_width="match_parent"
                android:text="@string/denglu"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_below="@+id/pass_editext"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/button_login"
                android:background="@drawable/button_selector_yellow"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                  android:text="@string/wanjimima"
                  android:textSize="14sp"
                  android:layout_below="@+id/button_login"
                  android:layout_marginTop="10dp"
                  android:textColor="@color/textcolor"
                  android:layout_marginRight="40dp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/disanfang"
                  android:textColor="@color/textcolor"
                  android:layout_marginTop="50dp"
                  android:textSize="14sp"
                  android:id="@+id/msg_one"
                  android:layout_centerHorizontal="true"
                  android:layout_below="@+id/button_login"
                  android:layout_height="wrap_content"/>
        <Button android:layout_width="match_parent"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/facebookbutton"
                android:text="@string/facebook"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/msg_one"
                android:layout_marginTop="8dp"
                android:id="@+id/three_button"
                android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="@string/disanfang001"
                  android:textSize="12sp"
                  android:layout_below="@+id/three_button"
                  android:layout_marginTop="8dp"
                  android:textColor="@color/textcolortwo"
                  android:layout_centerHorizontal="true"
                  android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>