<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="121dp"
              android:background="@color/white">
    <View android:layout_width="match_parent"
          android:background="@color/gray"
          android:id="@+id/line_top"
            android:layout_height="1.0dp"></View>
    <TextView android:layout_width="match_parent"
              android:textSize="14sp"
              android:layout_below="@+id/line_top"
              android:padding="5dp"
              android:text="@string/txt003"
              android:id="@+id/headtitle"
              android:paddingLeft="3dp"
              android:textColor="@color/text_color_heise_504f4f"
              android:drawableLeft="@drawable/left_yellow"
              android:layout_marginBottom="3dp"
              android:layout_height="wrap_content"/>
    <ImageView android:layout_width="80dp"
               android:id="@+id/item_pic"
               android:layout_margin="5dp"
               android:layout_below="@+id/headtitle"
               android:src="@drawable/deng_01"
               android:scaleType="centerCrop"
               android:layout_height="80dp"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/txt001"
              android:textColor="@color/text_color_heise_504f4f"
              android:textSize="14sp"
              android:layout_marginTop="3dp"
              android:ellipsize="end"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="20dp"
              android:layout_toRightOf="@+id/item_pic"
              android:id="@+id/item_title"
              android:gravity="center_horizontal|left"
              android:padding="3dp"
              android:layout_below="@+id/headtitle"
              android:layout_height="60dp"/>
    <TextView android:layout_width="match_parent"
              android:text="RMB:$850"
              android:layout_toRightOf="@+id/item_pic"
              android:layout_marginTop="2dp"
              android:layout_marginLeft="3dp"
              android:id="@+id/item_rmb"
              android:layout_below="@+id/item_title"
              android:textColor="@color/red_rmb"
              android:textSize="14sp"
              android:gravity="center_horizontal|left"
              android:layout_height="25dp"/>

    <TextView
              android:layout_width="wrap_content"
              android:textSize="12sp"
              android:padding="5dp"
              android:text="@string/txt004"
              android:gravity="right"
              android:textColor="@color/white"
              android:background="@color/yellow"
              android:layout_alignParentRight="true"
              android:layout_height="120dp"/>
</RelativeLayout>


