<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- head开始 -->
    <RelativeLayout
            android:id="@+id/lp_01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            >
        <ImageView
                android:id="@+id/leftbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_centerInParent="true"
                  android:text="@string/edit_user_name"
                  android:textColor="@color/white"
                  android:textSize="22sp"
                  android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/publish_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#35a5e7"
                android:layout_marginRight="10dp"
                android:text="@string/fabu"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <com.xiaogang.myapp.util.upload.ReboundScrollView
            android:layout_width="match_parent"
             android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                        android:orientation="vertical"
                      android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:maxHeight="200dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:textSize="16sp"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textColor="#ff000000"/>
            <TextView android:layout_width="wrap_content"
                      android:padding="15dp"
                      android:textColor="@color/red_normal"
                      android:text="@string/msg_pwr"
                      android:layout_height="wrap_content"/>

        </LinearLayout>
    </com.xiaogang.myapp.util.upload.ReboundScrollView>
</LinearLayout>